[gd_scene load_steps=4 format=2]

[ext_resource path="res://TitleScreen/Buttons/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://InGameMenu/InGameMenu.gd" type="Script" id=2]
[ext_resource path="res://Game/Options.tscn" type="PackedScene" id=3]

[node name="IngameMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -650.0
margin_top = -400.0
margin_right = 650.0
margin_bottom = 400.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BackGround" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.0
margin_top = -400.0
margin_right = 325.0
margin_bottom = 400.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="BackGround"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -285.0
margin_top = -360.0
margin_right = 285.0
margin_bottom = 360.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="OptionsButton" parent="BackGround/Buttons" instance=ExtResource( 1 )]
margin_left = 135.0
margin_right = 435.0
margin_bottom = 60.0
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Options"
align = 1

[node name="ExitButton" parent="BackGround/Buttons" instance=ExtResource( 1 )]
margin_left = 135.0
margin_top = 660.0
margin_right = 435.0
margin_bottom = 720.0
size_flags_horizontal = 4
text = "Exit"
align = 1
scene_to_load = "res://TitleScreen/TitleScreen.tscn"

[node name="Options" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="pressed" from="BackGround/Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
